--- a/book/index.Rmd
+++ b/book/index.Rmd
@@ -55,7 +55,7 @@ The Lecture is divided in the following Chapters, and each Chapter contains seve
 | Number| Name  | Themes | Status |
 |:------:|:-------|:-------|:-------:| 
 | 1 |**Introduction** | Intro, Mathematics reminder and Combinatorics. | ☑️ | 
-| 2 |**Elements of Set Theory For Probability** | Random variables, Trees, Venn diagram, Conditional probability, Independence & Bayes' theorem. | 🔧 | 
+| 2 |**Elements of Set Theory For Probability** | Random variables, Trees, Venn diagram, Conditional probability, Independence & Bayes' theorem. | ☑️ | 
 | 3 |**Axiomatic Foundations of Probability** | Probability Axioms, Illustrations of use | 🔧 | 
 | 4 | **Discrete random variables**| Definitions, Expected value and variance,  Binomial, Poisson, Negative binomial and Hypergeometric | 📝 | 
 | 5 | **Continuous random variables** | Definitions, Expected value and variance, Cumulative distribution function (cdf) and Probability density function (pdf), Some important examples: Uniform, Exponential, Gamma, Normal, logNormal, Student's t, Relationships | 📝 |
